--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
 	<title>Natalia Piana's Portfolio</title>
+<link type="text/css" rel="stylesheet" href="style.css"/>
+<link href='http://fonts.googleapis.com/css?family=Oswald:400,300 PT+Serif+Caption' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
 	<header>
 	<nav>
 		<ul>
-			<li><a href="/home">WORK</a></li>
-			<li><a href="/about">ABOUT</a></li>
 			<li><a href="/contact">CONTACT</a></li>
+			<li><a href="/about">ABOUT</a></li>
+			<li><a href="/home">WORK</a></li>
         </ul>
 </nav>
 <h1>Natalia Piana</h1>
@@ -18,27 +20,28 @@
 
 
 </header>
-<container class="gallery">
-	<div class="first-row">
-	<a href="/clover valley"><img src="homepage-images/1.png"/></a>
-	<a href="/ecetera"><img src="homepage-images/2.png"/></a>
-	<a href="/organic"><img src="homepage-images/3.png"/></a>
-	<a href="/quotes"><img src="homepage-images/4.png"/></a>
-</div>
-<div class="second-row">
-	<a href="/typographic RSA"><img src="homepage-images/5.png"/></a>
-	<a href="/posters"><img src="homepage-images/6.png"/></a>
-	<a href="/inkology"><img src="homepage-images/7.png"/></a>
-	<a href="/photography"><img src="homepage-images/8.png"/></a>
-</div>
-<div class="third-row">
-	<a href="/birds"><img src="homepage-images/9.png"/></a>
-	<a href="/wotw"><img src="homepage-images/10.png"/></a>
-	<a href="/csbm"><img src="homepage-images/11.png"/></a>
-	<a href="/b&b"><img src="homepage-images/12.png"/></a>
+<div class="gallery">
+	<section class="first-row">
+	<a href="/clover valley"><img src="homepage-graphics/1.png"/></a>
+	<a href="/ecetera"><img src="homepage-graphics/2.png"/></a>
+	<a href="/organic"><img src="homepage-graphics/3.png"/></a>
+	<a href="/quotes"><img src="homepage-graphics/4.png"/></a>
+</section>
+<section class="second-row">
+	<a href="/typographic RSA"><img src="homepage-graphics/5.png"/></a>
+	<a href="/posters"><img src="homepage-graphics/6.png"/></a>
+	<a href="/inkology"><img src="homepage-graphics/7.png"/></a>
+	<a href="/photography"><img src="homepage-graphics/8.png"/></a>
+</section>
+<section class="third-row">
+	<a href="/birds"><img src="homepage-graphics/9.png"/></a>
+	<a href="/wotw"><img src="homepage-graphics/10.png"/></a>
+	<a href="/csbm"><img src="homepage-graphics/11.png"/></a>
+	<a href="/b&b"><img src="homepage-graphics/12.png"/></a>
+</section>
 
 
-	</container>
+	</div>
 
 </body>	
 </html>
