--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Natalia Piana's Portfolio</title>
 <link type="text/css" rel="stylesheet" href="style.css"/>
-<link href='http://fonts.googleapis.com/css?family=Oswald:400,300 PT+Serif+Caption' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Oswald:400,300 PT+Serif+Caption' rel='stylesheet' type='text/css'/>
 
 </head>
 <body>
@@ -21,6 +21,28 @@
 
 </header>
 <div class="gallery">
+	<table class="legenda">
+		<tr>
+			<td>Branding</td><td><img src="homepage-graphics/pink.png"></td>
+           </tr>
+           <tr>
+			<td>Web</td><td><img src="homepage-graphics/blue.png"></td>
+		</tr>
+		<tr>
+			<td>Illustration</td><td><img src="homepage-graphics/green.png"></td>
+		</tr>
+		<tr>
+			<td>Photography</td> <td><img src="homepage-graphics/brown.png"></td>
+			</tr>
+			<tr>
+			<td>Infographic</td><td><img src="homepage-graphics/yellow.png"></td>
+		</tr>
+		<tr>
+			<td>Craft</td><td><img src="homepage-graphics/black.png"></td>
+			</tr>
+		
+	</table>
+
 	<section class="first-row">
 	<a href="/clover valley"><img src="homepage-graphics/1.png"/></a>
 	<a href="/ecetera"><img src="homepage-graphics/2.png"/></a>
