--- a/index.html
+++ b/index.html
@@ -23,43 +23,43 @@
 <div class="gallery">
 	<table class="legenda">
 		<tr>
-			<td>Branding</td><td><img src="homepage-graphics/pink.png"></td>
-           </tr>
-           <tr>
-			<td>Web</td><td><img src="homepage-graphics/blue.png"></td>
+			<td><img src="homepage-graphics/pink.png"></td><td class="words">Branding</td>
+        </tr>
+        <tr>
+			<td><img src="homepage-graphics/blue.png"></td><td class="words">Web</td>
 		</tr>
 		<tr>
-			<td>Illustration</td><td><img src="homepage-graphics/green.png"></td>
+			<td><img src="homepage-graphics/green.png"></td><td class="words">Illustration</td>
 		</tr>
 		<tr>
-			<td>Photography</td> <td><img src="homepage-graphics/brown.png"></td>
-			</tr>
-			<tr>
-			<td>Infographic</td><td><img src="homepage-graphics/yellow.png"></td>
+			<td><img src="homepage-graphics/brown.png"></td><td class="words">Typography</td>
 		</tr>
 		<tr>
-			<td>Craft</td><td><img src="homepage-graphics/black.png"></td>
-			</tr>
+			<td><img src="homepage-graphics/yellow.png"></td><td class="words">Infographic</td>
+		</tr>
+		<tr>
+			<td><img src="homepage-graphics/black.png"></td><td class="words">Craft</td>
+		</tr>
 		
 	</table>
 
 	<section class="first-row">
-	<a href="/clover valley"><img src="homepage-graphics/1.png"/></a>
-	<a href="/ecetera"><img src="homepage-graphics/2.png"/></a>
-	<a href="/organic"><img src="homepage-graphics/3.png"/></a>
-	<a href="/quotes"><img src="homepage-graphics/4.png"/></a>
+	<a href="/clover valley"><img src="homepage-graphics/1.png" onmouseover="this.src='homepage-graphics/a.png'" onmouseout="this.src='homepage-graphics/1.png'"/></a>
+	<a href="/ecetera"><img src="homepage-graphics/2.png" onmouseover="this.src='homepage-graphics/b.png'" onmouseout="this.src='homepage-graphics/2.png'"/></a>
+	<a href="/organic"><img src="homepage-graphics/3.png" onmouseover="this.src='homepage-graphics/c.png'" onmouseout="this.src='homepage-graphics/3.png'"/></a>
+	<a href="/quotes"><img src="homepage-graphics/4.png" onmouseover="this.src='homepage-graphics/d.png'" onmouseout="this.src='homepage-graphics/4.png'"/></a>
 </section>
 <section class="second-row">
-	<a href="/typographic RSA"><img src="homepage-graphics/5.png"/></a>
-	<a href="/posters"><img src="homepage-graphics/6.png"/></a>
-	<a href="/inkology"><img src="homepage-graphics/7.png"/></a>
-	<a href="/photography"><img src="homepage-graphics/8.png"/></a>
+	<a href="/typographic RSA"><img src="homepage-graphics/5.png" onmouseover="this.src='homepage-graphics/e.png'" onmouseout="this.src='homepage-graphics/5.png'"/></a>
+	<a href="/posters"><img src="homepage-graphics/6.png" onmouseover="this.src='homepage-graphics/f.png'" onmouseout="this.src='homepage-graphics/6.png'"/></a>
+	<a href="/inkology"><img src="homepage-graphics/7.png" onmouseover="this.src='homepage-graphics/g.png'" onmouseout="this.src='homepage-graphics/7.png'"/></a>
+	<a href="/photography"><img src="homepage-graphics/8.png" onmouseover="this.src='homepage-graphics/h.png'" onmouseout="this.src='homepage-graphics/8.png'"/></a>
 </section>
 <section class="third-row">
-	<a href="/birds"><img src="homepage-graphics/9.png"/></a>
-	<a href="/wotw"><img src="homepage-graphics/10.png"/></a>
-	<a href="/csbm"><img src="homepage-graphics/11.png"/></a>
-	<a href="/b&b"><img src="homepage-graphics/12.png"/></a>
+	<a href="/birds"><img src="homepage-graphics/9.png" onmouseover="this.src='homepage-graphics/i.png'" onmouseout="this.src='homepage-graphics/9.png'"/></a>
+	<a href="/wotw"><img src="homepage-graphics/10.png" onmouseover="this.src='homepage-graphics/j.png'" onmouseout="this.src='homepage-graphics/10.png'"/></a>
+	<a href="/csbm"><img src="homepage-graphics/11.png" onmouseover="this.src='homepage-graphics/k.png'" onmouseout="this.src='homepage-graphics/11.png'"/></a>
+	<a href="/b&b"><img src="homepage-graphics/12.png" onmouseover="this.src='homepage-graphics/l.png'" onmouseout="this.src='homepage-graphics/12.png'"/></a>
 </section>
 
 
