--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 	</table>
 
 	<section class="first-row">
-	<a href="/clover valley"><img src="homepage-graphics/1.png" onmouseover="this.src='homepage-graphics/a.png'" onmouseout="this.src='homepage-graphics/1.png'"/></a>
-	<a href="/ecetera"><img src="homepage-graphics/2.png" onmouseover="this.src='homepage-graphics/b.png'" onmouseout="this.src='homepage-graphics/2.png'"/></a>
-	<a href="/organic"><img src="homepage-graphics/3.png" onmouseover="this.src='homepage-graphics/c.png'" onmouseout="this.src='homepage-graphics/3.png'"/></a>
-	<a href="/quotes"><img src="homepage-graphics/4.png" onmouseover="this.src='homepage-graphics/d.png'" onmouseout="this.src='homepage-graphics/4.png'"/></a>
+	<a href="/clover valley"><img src="homepage-graphics/1.png" onmouseover="this.src='homepage-graphics/1a.png'" onmouseout="this.src='homepage-graphics/1.png'"/></a>
+	<a href="/ecetera"><img src="homepage-graphics/2.png" onmouseover="this.src='homepage-graphics/2b.png'" onmouseout="this.src='homepage-graphics/2.png'"/></a>
+	<a href="/organic"><img src="homepage-graphics/3.png" onmouseover="this.src='homepage-graphics/3c.png'" onmouseout="this.src='homepage-graphics/3.png'"/></a>
+	<a href="/quotes"><img src="homepage-graphics/4.png" onmouseover="this.src='homepage-graphics/4d.png'" onmouseout="this.src='homepage-graphics/4.png'"/></a>
 </section>
 <section class="second-row">
 	<a href="/typographic RSA"><img src="homepage-graphics/5.png" onmouseover="this.src='homepage-graphics/e.png'" onmouseout="this.src='homepage-graphics/5.png'"/></a>
